updated pages with title

--- a/QuizSite/WebContent/create-account.html
+++ b/QuizSite/WebContent/create-account.html
@@ -1,10 +1,14 @@
 <html>
 
 <head>
-<title>Create Account</title>
+<title>Create New Account</title>
+<link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+
+<h3 class="title">Awesome Quiz Site</h3>
+
 <h1>Create New Account</h1>
 <p>Please enter proposed name and password.</p>
 <form action="CreateServlet" method="post">
