--- a/QuizSite/WebContent/index.html
+++ b/QuizSite/WebContent/index.html
@@ -2,10 +2,13 @@
 
 <head>
 <title>Welcome</title>
+<link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<h1>Welcome to Awesome Quiz Homepage</h1>
+
+<h3 class="title">Awesome Quiz Site</h3>
+
 <p>Please log in.</p>
 <form action="LoginServlet" method="post">
 <p>User Name: <input type="text" name="username" /></p>
