--- a/QuizSite/WebContent/information-incorrect.html
+++ b/QuizSite/WebContent/information-incorrect.html
@@ -1,10 +1,14 @@
 <html>
 
 <head>
-<title>Information Incorrect</title>
+<title>Welcome</title>
+<link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+
+<h3 class="title">Awesome Quiz Site</h3>
+
 <h1>Please Try Again</h1>
 <p>Either your user name or password is incorrect. Please try again.</p>
 <form action="LoginServlet" method="post">
