recopied and replaced files with what i changed

--- a/QuizSite/WebContent/create-account.html
+++ b/QuizSite/WebContent/create-account.html
@@ -14,7 +14,7 @@
 <form action="CreateServlet" method="post">
 <p>User Name: <input type="text" name="username" /></p>
 <p>Password: <input type="password" name="password"/>
-<input type="submit" value="Create"/></p>
+<input type="submit" value="Login"/></p>
 </form>
 </body>
 
