--- a/QuizSite/WebContent/create-account.html
+++ b/QuizSite/WebContent/create-account.html
@@ -7,15 +7,20 @@
 
 <body>
 
-<h3 class="title">Awesome Quiz Site</h3>
+<img class="centeredImage" src="http://imageshack.us/a/img7/1496/quizzsitelogo.png">
 
+<div class="centered">
 <h1>Create New Account</h1>
 <p>Please enter proposed name and password.</p>
 <form action="CreateServlet" method="post">
 <p>User Name: <input type="text" name="username" /></p>
-<p>Password: <input type="password" name="password"/>
-<input type="submit" value="Submit Answer"/></p>
+<p>Password: <input type="password" name="password"/><p>
+<input class="loginButton" type="submit" value="Create Account"/>
 </form>
+
+<p class="centered"><a href="index.html">Return To Login</a></p>
+
+</div>
 </body>
 
 </html>
