--- a/QuizSite/WebContent/index.html
+++ b/QuizSite/WebContent/index.html
@@ -7,15 +7,14 @@
 
 <body>
 
-<h3 class="title">Awesome Quiz Site</h3>
+<img class="centeredImage" src="http://imageshack.us/a/img7/1496/quizzsitelogo.png">
 
-<p>Please log in.</p>
-<form action="LoginServlet" method="post">
+<form class="centered" action="LoginServlet" method="post">
 <p>User Name: <input type="text" name="username" /></p>
-<p>Password: <input type="password" name="password"/>
-<input type="submit" value="Login"/></p>
+<p>Password: <input type="password" name="password"/></p>
+<input class="loginButton" type="submit" value="Login"/></p>
 </form>
-<p><a href="create-account.html">Create New Account</a></p>
+<p class="centered"><a href="create-account.html">Create New Account</a></p>
 </body>
 
 </html>
