--- a/QuizSite/WebContent/information-incorrect.html
+++ b/QuizSite/WebContent/information-incorrect.html
@@ -7,16 +7,18 @@
 
 <body>
 
-<h3 class="title">Awesome Quiz Site</h3>
+<img class="centeredImage" src="http://imageshack.us/a/img7/1496/quizzsitelogo.png">
 
+<div class="centered">
 <h1>Please Try Again</h1>
 <p>Either your user name or password is incorrect. Please try again.</p>
 <form action="LoginServlet" method="post">
 <p>User Name: <input type="text" name="username" /></p>
-<p>Password: <input type="password" name="password"/>
-<input type="submit" value="Login"/></p>
+<p>Password: <input type="password" name="password"/></p>
+<p><input class="loginButton" type="submit" value="Login"/></p>
 </form>
 <p><a href="create-account.html">Create New Account</a></p>
+</div>
 </body>
 
 </html>
