adds image to navbar

--- a/QuizSite/WebContent/navbar.html
+++ b/QuizSite/WebContent/navbar.html
@@ -1,5 +1,6 @@
 <div class="navbarPanel">
 
+
 <div class="right">
 <ul class="navbar">
 <li class="inline navbarItem"><a href="homepage.jsp">Home</a></li>
@@ -11,4 +12,9 @@
 	</form>
 </li>
 </ul>
+</div>
+
+<div class="inline">
+<p><img class="logo" src="http://imageshack.us/a/img7/1496/quizzsitelogo.png"></img></p>
+</div>
 </div>
