added admin page

--- a/QuizSite/WebContent/navbar.html
+++ b/QuizSite/WebContent/navbar.html
@@ -6,6 +6,7 @@
 <li class="inline navbarItem"><a href="homepage.jsp">Home</a></li>
 <li class="inline navbarItem"><a href="quizzes.jsp">Quizzes</a></li>
 <li class="inline navbarItem"><a href="inbox.jsp">Inbox</a></li>
+<li class="inline navbarItem"><a href="admin.jsp">Admin</a></li>
 <li class="inline navbarItem logoutButton">
 	<form action="LogoutServlet" method="post" class="inline">
 		<p class="inline"><input type="submit" value="Logout" /></p>
