--- a/QuizSite/WebContent/index.html
+++ b/QuizSite/WebContent/index.html
@@ -12,7 +12,7 @@
 <form class="centered" action="LoginServlet" method="post">
 <p>User Name: <input type="text" name="username" /></p>
 <p>Password: <input type="password" name="password"/></p>
-<input class="loginButton" type="submit" value="Login"/></p>
+<input class="loginButton" type="submit" value="Login"/>
 </form>
 <p class="centered"><a href="create-account.html">Create New Account</a></p>
 </body>
