--- a/QuizSite/WebContent/index.html
+++ b/QuizSite/WebContent/index.html
@@ -14,7 +14,7 @@
 <p>Password: <input type="password" name="password"/></p>
 <input class="loginButton" type="submit" value="Login"/>
 </form>
-<p class="centered"><a href="create-account.html">Create New Account</a></p>
+<p class="loginButton"><a href="create-account.html">Create New Account</a></p>
 </body>
 
 </html>
