--- a/QuizSite/WebContent/information-incorrect.html
+++ b/QuizSite/WebContent/information-incorrect.html
@@ -17,7 +17,10 @@
 <p>Password: <input type="password" name="password"/></p>
 <p><input class="loginButton" type="submit" value="Login"/></p>
 </form>
-<p><a href="create-account.html">Create New Account</a></p>
+
+<form class="centered" action="create-account.html" method="post">
+<input class="loginButton" type="submit" value="Create New Account"/>
+</form>
 </div>
 </body>
 
