--- a/QuizSite/README.html
+++ b/QuizSite/README.html
@@ -1,9 +1,18 @@
 Extensions:
-salt
-extra achievement
-cookies
-logo
-challenge remembers score and sends message back
-error-checked most forms
+-extra achievement
+-login cookie
+-name/logo
+-good looking website
+-challenge remembers score and sends message back to challenger
+-error-checking (friending, messages)
+-tags
+-non-registered access
+-password salt
+-question weight
+-ratings and reviews
+-reporting inappropriate quizzes
+-profile picture
+-tooltips
+-sortable tables
 
 Known Bugs:
