fixed first round of errors

--- a/QuizSite/WebContent/create-account.html
+++ b/QuizSite/WebContent/create-account.html
@@ -18,7 +18,7 @@
 <tr><td>Password:</td><td><input type="password" name="password" /></td></tr>
 </table>
 <input class="loginButton" type="submit" value="Create Account"/>
-</form><br />
+</form>
 <form class="centered" action="index.jsp" method="post">
 <input class="loginButton" type="submit" value="Return to Login"/>
 </form>
