--- a/QuizSite/WebContent/information-incorrect.html
+++ b/QuizSite/WebContent/information-incorrect.html
@@ -21,6 +21,9 @@
 <form class="centered" action="create-account.html" method="post">
 <input class="loginButton" type="submit" value="Create New Account"/>
 </form>
+<form class="centered" action="homepage.jsp" method="post">
+<input class="loginButton" type="submit" value="Enter as Guest"/>
+</form>
 </div>
 </body>
 
